# agentui

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  REPOSITORY_NAMING.md  SYNTAX_DEMO_RESULTS.md  feature_list.json  go.mod  pyproject.toml  show_ansi_codes.go  show_syntax_test.sh
.claude/: approval-queue.json  checkpoint-v2.json  execution-plan.json  feature-graph.json  handoff-context.json  sdk-bridge.local.md
cmd/agentui/: main.go
docs/: AESTHETIC_REQUIREMENTS.md  ANIMATIONS.md  COMPONENT_TESTING.md  GENERATIVE_UI_IMPLEMENTATION_STATUS.md  REFACTORING_VALIDATION.md  SKILLS.md  STORYBOOK_ASSISTANT_EXPANSION.md
docs/plans/: 2026-01-16-agentui-complete-implementation.md  2026-01-18-agentui-refactoring.md  README.md
examples/: app.yaml  cli_demo.py  e2e_test.py  generative_ui_demo.py  generative_ui_v2_demo.py  quick_test.py  simple_agent.py
examples/skills/weather/: SKILL.md  skill.py  skill.yaml
internal/app/: app.go
internal/protocol/: handler.go  types.go
internal/theme/: loader_test.go  theme.go  theme_test.go  themes.go
internal/ui/components/: forms.go
internal/ui/views/: views.go
src/agentui/: __init__.py  app.py  bridge.py  cli.py  component_catalog.py  component_selector.py  config.py  core.py  exceptions.py  layout.py  primitives.py  protocol.py  setup_assistant.py  streaming.py  types.py
src/agentui/bridge/: __init__.py  base.py  cli_bridge.py  tui_bridge.py
src/agentui/core/: __init__.py  agent.py  display_tools.py  message_handler.py  tool_executor.py  ui_handler.py
src/agentui/providers/: __init__.py  claude.py  openai.py
src/agentui/skills/: __init__.py
src/agentui/testing/: __init__.py  assertions.py  component_tester.py  snapshot.py
src/agentui/ui/: __init__.py  tui.py
tests/: __init__.py  conftest.py  test_bridge.py  test_component_tester.py  test_core.py  test_exceptions.py  test_generative_ui.py  test_phase1_catalog.py  test_phase2_selector.py  test_phase5_layouts.py  test_primitives.py  test_protocol.py  test_providers.py  test_skills.py  test_streaming.py
tests/__snapshots__/: test-fibonacci.ansi  test-fibonacci.txt
