[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentui"
version = "0.1.0"
description = "Build beautiful AI agent applications with Charm-quality TUIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jesper", email = "jesper@example.com" }
]
keywords = [
    "ai",
    "agent",
    "tui",
    "cli",
    "llm",
    "claude",
    "openai",
    "charm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.50.0",
]
all = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]
dev = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
agentui = "agentui.cli:main"

[project.urls]
Homepage = "https://github.com/flight505/agentui"
Documentation = "https://github.com/flight505/agentui#readme"
Repository = "https://github.com/flight505/agentui"
Issues = "https://github.com/flight505/agentui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentui"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentui"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
